<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/start_screens_background">

    <TextView android:id="@+id/login_page_main_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/login_page_main_text"
              android:textSize="40sp"
              android:textColor="@color/start_screens_main_texts"
              android:fontFamily="sans-serif-black"
              android:textStyle="bold"
              android:layout_marginBottom="100dp"
              android:textAlignment="center">
    </TextView>

    <TextView
        android:id="@+id/login_successful_registration_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="25sp"
        android:textColor="@color/start_screens_main_texts"
        android:textStyle="italic"
        android:textAlignment="center">
    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        app:errorTextAppearance="@style/StartPagesErrorMessage"
        app:errorEnabled="false">
    </com.google.android.material.textfield.TextInputLayout>

    <EditText android:id="@+id/login_username_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/login_page_username_hint"
        android:textColorHint="@color/start_screens_field_hint"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/start_pages_field"
        android:autofillHints="username"
        android:layout_marginBottom="20dp">
    </EditText>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        app:errorTextAppearance="@style/StartPagesErrorMessage"
        app:errorEnabled="false">
    </com.google.android.material.textfield.TextInputLayout>

    <EditText android:id="@+id/login_password_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/login_page_password_hint"
        android:textColorHint="@color/start_screens_field_hint"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/start_pages_field"
        android:importantForAutofill="no"
        android:layout_marginBottom="40dp">
    </EditText>

    <Button android:id="@+id/login_page_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page_login_button"
            android:textSize="22sp"
            style="@style/StartScreensButtons"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp">
    </Button>

</LinearLayout>