<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="fill_vertical"
    android:background="@color/personal_chat_background">

    <LinearLayout
        android:id="@+id/personal_chat_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/personal_chat_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/personal_chat_back_arrow"
            android:src="@drawable/personal_chat_back_arrow"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginRight="20dp">
        </ImageView>

        <TextView
            android:id="@+id/personal_chat_chat_partner_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:textColor="@color/personal_chat_chat_partner_username"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <View
        android:id="@+id/personal_chat_header_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC">
    </View>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/personal_chat_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:clipToPadding="false">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/personal_chat_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/personal_chat_message_input_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:minLines="1"
            android:maxLines="3"
            android:padding="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/personal_chat_message_input_box_background"
            android:hint="@string/personal_chat_message_input_box_hint"
            android:textColorHint="@color/personal_chat_message_input_box_hint"
            android:textColor="@color/personal_chat_message_input_box_text"
            android:textSize="18sp">
        </EditText>

    <ImageView
        android:id="@+id/personal_chat_message_sending_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:layout_marginRight="10dp"
        android:src="@drawable/personal_chat_message_sending_arrow"
        android:contentDescription="@string/personal_chat_message_sending_arrow"
        android:clickable="true"
        android:focusable="true">
    </ImageView>

    </LinearLayout>

</LinearLayout>